--- a/configs/dataset_configs/mc_rtt.yaml
+++ b/configs/dataset_configs/mc_rtt.yaml
@@ -8,13 +8,13 @@ model:
   dropout_rates: 0.6
   hidden_size: 64
   initrange: 0.01
-  # loss_ratio: 0.25
-  # mask_ratio: 0.75
+  loss_ratio: 0.25
+  mask_ratio: 0.75
   max_spike_count: 20
-  n_heads: 1
+  n_heads: 2
   n_layers: 5
   norm: layer
-  # random_ratio: 1.0
+  random_ratio: 1.0
   undivided_attn: false
   xavier: false
 setup:
@@ -26,13 +26,13 @@ setup:
   runs_dir: runs/
   save_min_bps: -1000.0
   save_model: true
-  seed: 100
+  seed: 1
   subset_seed: 404
 train:
   batch_size: 1024
-  # seq_len: 60
+  seq_len: 60
   early_stopping: true
-  epochs: 20000
+  epochs: 1000
   es_chk_pnt: 0.5
   es_min_bps: 0.1
   init_lr: 0.0005
