--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,8 @@
-/runs
+/runs/*
 /wandb/*
-/data/*.csv
-/data/*.h5
-/data/*.mat
-/images
-/plots
-/viz_check_images
+
+/data/*/cached_data/*
+/data/*/cached_pcr/*
+
 */__pycache__
 __pycache__
-/__pycache__
-/__pycache__/*
-plot.ipynb
-experiments/session_factors/*
-experiments/session_trials/*
-*.pkl
