--- a/configs/sweeps/full_rand_sweep.yaml
+++ b/configs/sweeps/full_rand_sweep.yaml
@@ -17,8 +17,10 @@ parameters:
     values: [1, 6, 30]
   model.dropout:
     values: [0.1, 0.3, 0.5, 0.7]
+  model.dropout_rates:
+    values: [0.1, 0.3, 0.5, 0.7]
+  model.dropout_embedding:
+    values: [0.1, 0.3, 0.5, 0.7]
   model.dropout_attention:
     values: [0.1, 0.3, 0.5, 0.7]
-  model.mask_ratio:
-    values: [0.75, 0.85, 0.95, 1.0]
   
